enable preview feature for gradle tasks